Fix reading issue

--- a/modèle_épidémiologie_SIRD.ipynb
+++ b/modèle_épidémiologie_SIRD.ipynb
@@ -582,7 +582,9 @@
     {
       "cell_type": "markdown",
       "metadata": {},
-      "source": []
+      "source": [
+        "Abdessamad Touzani"
+      ]
     }
   ],
   "metadata": {
