Fix Reading issue

--- a/modèle_épidémiologie_SIRD.ipynb
+++ b/modèle_épidémiologie_SIRD.ipynb
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 8,
       "metadata": {
         "id": "xFESaxHuGbrT"
       },
@@ -113,7 +113,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -138,7 +138,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -202,7 +202,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -294,7 +294,7 @@
               "4     4      0.971090  0.007307  0.005403  0.004894"
             ]
           },
-          "execution_count": 74,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -309,7 +309,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -319,7 +319,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -339,6 +339,7 @@
       "source": [
         "#2\n",
         "# MSE\n",
+        "import numpy as np\n",
         "def sird_mse(predict_value, true_value) :\n",
         "    return np.mean((predict_value - true_value)**2)\n",
         "\n",
@@ -363,7 +364,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -440,7 +441,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": 15,
       "metadata": {
         "id": "3rVe4PCEKuTr"
       },
@@ -513,7 +514,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": 16,
       "metadata": {
         "id": "5K9aboCLI8eo"
       },
