Fix raeding issue

--- a/modèle_épidémiologie_SIRD.ipynb
+++ b/modèle_épidémiologie_SIRD.ipynb
@@ -581,6 +581,24 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import nbformat\n",
+        "\n",
+        "with open(\"modèle_épidémiologie_SIRD.ipynb\") as f:\n",
+        "    nb = nbformat.read(f, as_version=4)\n",
+        "\n",
+        "if 'widgets' in nb.metadata and 'state' not in nb.metadata['widgets']:\n",
+        "    nb.metadata['widgets']['state'] = {}\n",
+        "\n",
+        "with open(\"your_notebook_cleaned.ipynb\", \"w\") as f:\n",
+        "    nbformat.write(nb, f)\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
