Fix Reading Issue

--- a/modèle_épidémiologie_SIRD.ipynb
+++ b/modèle_épidémiologie_SIRD.ipynb
@@ -582,35 +582,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Cleaned notebook saved to: modèle_épidémiologie_SIRD.ipynb\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import nbformat\n",
         "\n",
-        "notebook_path = \"modèle_épidémiologie_SIRD.ipynb\"\n",
-        "output_path = \"modèle_épidémiologie_SIRD.ipynb\" \n",
-        "\n",
-        "with open(notebook_path, \"r\", encoding=\"utf-8\") as f:\n",
+        "with open(\"modèle_épidémiologie_SIRD.ipynb\") as f:\n",
         "    nb = nbformat.read(f, as_version=4)\n",
         "\n",
-        "# Delete 'metadata.widgets' if it exists\n",
-        "if 'widgets' in nb.metadata:\n",
-        "    del nb.metadata['widgets']\n",
-        "\n",
-        "# Save cleaned notebook\n",
-        "with open(output_path, \"w\", encoding=\"utf-8\") as f:\n",
-        "    nbformat.write(nb, f)\n",
-        "\n",
-        "print(f\"Cleaned notebook saved to: {output_path}\")\n"
+        "if 'widgets' in nb.metadata and 'state' not in nb.metadata['widgets']:\n",
+        "    nb.metadata['widgets']['state'] = {}\n"
       ]
     },
     {
